# emscripten-dev-environment

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
.devcontainer/: devcontainer.json  dockerfile
assets/: shell.html
src/: main.cpp
